<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="#656565"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/policy_content"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:autofillHints="name"
                    android:background="@null"
                    android:text="@string/policy_dialog_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/policy_cancel"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape_dialog_cancel"
                android:gravity="center"
                android:text="@string/policy_cancel"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/policy_confirm"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/policy_cancel"
                android:background="@drawable/shape_dialog_confirm"
                android:gravity="center"
                android:text="@string/policy_confirm"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>