<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#656565"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_dialog_edit"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:autofillHints="name"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/history"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_dialog_cancel"
                android:gravity="center"
                android:text="@string/history_cancel"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/tv_cancel"
                android:background="@drawable/shape_dialog_confirm"
                android:gravity="center"
                android:text="@string/history_confirm"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>