<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f9ff"
    android:orientation="vertical"
    tools:context=".view.UsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/us_back"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/policy_back" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#f6f9ff">

            <ImageView
                android:id="@+id/us_logo"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_dialog_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/us_one"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/setting_policy"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/setting_back2" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f7f7f7" />

            <RelativeLayout
                android:id="@+id/us_two"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/setting_server"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/setting_back2" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f7f7f7" />

            <RelativeLayout
                android:id="@+id/us_three"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/setting_userinfo"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/setting_back2" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f7f7f7" />

            <RelativeLayout
                android:id="@+id/us_four"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/setting_sdk"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/setting_back2" />


            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/us_update"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_above="@+id/us_version"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_dialog_confirm"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/us_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/versions"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>