<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f9ff"
    android:orientation="vertical"
    tools:context=".view.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/setting_back"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/history_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eceff4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_use" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/use_one"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_black"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_black"
                android:text="@string/setting_set"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/use_two"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_message"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/message_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_message"
                android:text="@string/setting_feedback"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/use_three"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_user"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/we_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_user"
                android:text="@string/setting_user"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_policy" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/policy_one"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_policy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/policy_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_policy"
                android:text="@string/setting_policy"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/policy_two"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_user1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/user_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_user1"
                android:text="@string/setting_server"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/policy_three"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_userinfo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/userinfo_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_userinfo"
                android:text="@string/setting_userinfo"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/policy_four"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_sdk"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                android:src="@drawable/sdk_black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/setting_sdk"
                android:text="@string/setting_sdk"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/setting_back2" />


        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />
    </RelativeLayout>
</LinearLayout>